src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagMaxLineFitMse_set(void* self, float val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_aprilTagMinWhiteBlackDiff_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagMinWhiteBlackDiff_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_aprilTagDeglitch_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagDeglitch_set(void* self, int val);
extern "C" __declspec(dllexport) bool aruco_DetectorParameters_detectInvertedMarker_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_detectInvertedMarker_set(void* self, bool val);
extern "C" __declspec(dllexport) bool aruco_DetectorParameters_useAruco3Detection_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_useAruco3Detection_set(void* self, bool val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_minSideLengthCanonicalImg_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minSideLengthCanonicalImg_set(void* self, int val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_minMarkerLengthRatioOriginalImg_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minMarkerLengthRatioOriginalImg_set(void* self, float val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_validBitIdThreshold_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_validBitIdThreshold_set(void* self, float val);
extern "C" __declspec(dllexport) void aruco_Dictionary_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_Dictionary_New_0();
extern "C" __declspec(dllexport) void* aruco_Dictionary_New_1(void* bytesList, int _markerSize, int maxcorr);
extern "C" __declspec(dllexport) bool aruco_Dictionary_readDictionary_0(void* self, void* fn);
extern "C" __declspec(dllexport) void aruco_Dictionary_writeDictionary_0(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) bool aruco_Dictionary_identify_0(void* self, void* onlyBits, int idx, int rotation, double maxCorrectionRate);
extern "C" __declspec(dllexport) bool aruco_Dictionary_identify_1(void* self, void* onlyCellPixelRatio, int idx, int rotation, double maxCorrectionRate, float validBitIdThreshold);
extern "C" __declspec(dllexport) int aruco_Dictionary_getDistanceToId_0(void* self, void* bits, int id, bool allRotations);
extern "C" __declspec(dllexport) void aruco_Dictionary_generateImageMarker_0(void* self, int id, int sidePixels, void* _img, int borderBits);
extern "C" __declspec(dllexport) void* aruco_Dictionary_getByteListFromBits_0(void* bits);
extern "C" __declspec(dllexport) void* aruco_Dictionary_getBitsFromByteList_0(void* byteList, int markerSize, int rotationId);
extern "C" __declspec(dllexport) void* aruco_Dictionary_getMarkerBits_0(void* self, int markerId, int rotationId);
extern "C" __declspec(dllexport) void* aruco_Dictionary_bytesList_get(void* self);
extern "C" __declspec(dllexport) void aruco_Dictionary_bytesList_set(void* self, void* val);
extern "C" __declspec(dllexport) int aruco_Dictionary_markerSize_get(void* self);
extern "C" __declspec(dllexport) void aruco_Dictionary_markerSize_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_Dictionary_maxCorrectionBits_get(void* self);
extern "C" __declspec(dllexport) void aruco_Dictionary_maxCorrectionBits_set(void* self, int val);
extern "C" __declspec(dllexport) void aruco_GridBoard_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_GridBoard_New_0(cv::Size size, float markerLength, float markerSeparation, void* dictionary, void* ids);
extern "C" __declspec(dllexport) cv::Size aruco_GridBoard_getGridSize_0(void* self);
extern "C" __declspec(dllexport) float aruco_GridBoard_getMarkerLength_0(void* self);
extern "C" __declspec(dllexport) float aruco_GridBoard_getMarkerSeparation_0(void* self);
extern "C" __declspec(dllexport) void aruco_RefineParameters_Delete(void* self);
extern "C" __declspec(dllexport) void* aruco_RefineParameters_New_0(float minRepDistance, float errorCorrectionRate, bool checkAllOrders);
extern "C" __declspec(dllexport) bool aruco_RefineParameters_readRefineParameters_0(void* self, void* fn);
extern "C" __declspec(dllexport) bool aruco_RefineParameters_writeRefineParameters_0(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) float aruco_RefineParameters_minRepDistance_get(void* self);
extern "C" __declspec(dllexport) void aruco_RefineParameters_minRepDistance_set(void* self, float val);
extern "C" __declspec(dllexport) float aruco_RefineParameters_errorCorrectionRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_RefineParameters_errorCorrectionRate_set(void* self, float val);
extern "C" __declspec(dllexport) bool aruco_RefineParameters_checkAllOrders_get(void* self);
extern "C" __declspec(dllexport) void aruco_RefineParameters_checkAllOrders_set(void* self, bool val);
extern "C" __declspec(dllexport) void barcode_BarcodeDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* barcode_BarcodeDetector_New_0();
extern "C" __declspec(dllexport) void* barcode_BarcodeDetector_New_1(const char* super_resolution_model_path);
extern "C" __declspec(dllexport) bool barcode_BarcodeDetector_decodeWithType_0(void* self, void* img, void* points, void* decoded_info, void* decoded_type);
extern "C" __declspec(dllexport) bool barcode_BarcodeDetector_detectAndDecodeWithType_0(void* self, void* img, void* decoded_info, void* decoded_type, void* points);
extern "C" __declspec(dllexport) double barcode_BarcodeDetector_getDownsamplingThreshold_0(void* self);