src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagMaxLineFitMse_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_aprilTagMinWhiteBlackDiff_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagMinWhiteBlackDiff_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_aprilTagDeglitch_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagDeglitch_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_DetectorParameters_detectInvertedMarker_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_detectInvertedMarker_set(ArucoDetectorParametersHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_DetectorParameters_useAruco3Detection_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_useAruco3Detection_set(ArucoDetectorParametersHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_minSideLengthCanonicalImg_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minSideLengthCanonicalImg_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_minMarkerLengthRatioOriginalImg_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minMarkerLengthRatioOriginalImg_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_validBitIdThreshold_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_validBitIdThreshold_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_New_1(MatHandle bytesList, int _markerSize, int maxcorr);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_Dictionary_readDictionary_0(ArucoDictionaryHandle self, FileNodeHandle fn);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_writeDictionary_0(ArucoDictionaryHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_Dictionary_identify_0(ArucoDictionaryHandle self, MatHandle onlyBits, int idx, int rotation, double maxCorrectionRate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_Dictionary_identify_1(ArucoDictionaryHandle self, MatHandle onlyCellPixelRatio, int idx, int rotation, double maxCorrectionRate, float validBitIdThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_Dictionary_getDistanceToId_0(ArucoDictionaryHandle self, MatHandle bits, int id, [MarshalAs(UnmanagedType.U1)] bool allRotations);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_generateImageMarker_0(ArucoDictionaryHandle self, int id, int sidePixels, MatHandle _img, int borderBits);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_getByteListFromBits_0(MatHandle bits);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_getBitsFromByteList_0(MatHandle byteList, int markerSize, int rotationId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_getMarkerBits_0(ArucoDictionaryHandle self, int markerId, int rotationId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_Dictionary_bytesList_get(ArucoDictionaryHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_bytesList_set(ArucoDictionaryHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_Dictionary_markerSize_get(ArucoDictionaryHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_markerSize_set(ArucoDictionaryHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_Dictionary_maxCorrectionBits_get(ArucoDictionaryHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_Dictionary_maxCorrectionBits_set(ArucoDictionaryHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_GridBoard_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_GridBoard_New_0(Size size, float markerLength, float markerSeparation, IntPtr dictionary, IntPtr ids);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size aruco_GridBoard_getGridSize_0(ArucoGridBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_GridBoard_getMarkerLength_0(ArucoGridBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_GridBoard_getMarkerSeparation_0(ArucoGridBoardHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_RefineParameters_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr aruco_RefineParameters_New_0(float minRepDistance, float errorCorrectionRate, [MarshalAs(UnmanagedType.U1)] bool checkAllOrders);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_RefineParameters_readRefineParameters_0(ArucoRefineParametersHandle self, FileNodeHandle fn);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_RefineParameters_writeRefineParameters_0(ArucoRefineParametersHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_RefineParameters_minRepDistance_get(ArucoRefineParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_RefineParameters_minRepDistance_set(ArucoRefineParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_RefineParameters_errorCorrectionRate_get(ArucoRefineParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_RefineParameters_errorCorrectionRate_set(ArucoRefineParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool aruco_RefineParameters_checkAllOrders_get(ArucoRefineParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_RefineParameters_checkAllOrders_set(ArucoRefineParametersHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void barcode_BarcodeDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr barcode_BarcodeDetector_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr barcode_BarcodeDetector_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? super_resolution_model_path);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool barcode_BarcodeDetector_decodeWithType_0(BarcodeBarcodeDetectorHandle self, MatHandle img, MatHandle points, IntPtr decoded_info, IntPtr decoded_type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool barcode_BarcodeDetector_detectAndDecodeWithType_0(BarcodeBarcodeDetectorHandle self, MatHandle img, IntPtr decoded_info, IntPtr decoded_type, IntPtr points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double barcode_BarcodeDetector_getDownsamplingThreshold_0(BarcodeBarcodeDetectorHandle self);
